Fix files a bit
